--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="fairclinical.github.io/css/normalize.css">
-  <link rel="stylesheet" href="fairclinical.github.io/css/main.css">
-  <script src="fairclinical.github.io/js/vendor/modernizr-2.8.3.min.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body class="no-sidebars">
 <!--[if lt IE 8]>
@@ -227,10 +227,10 @@
 <!-- scripts from the HTML5 Boilerplate theme -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
-window.jQuery || document.write('<script src="fairclinical.github.io/js/vendor/jquery-1.11.1.min.js"><\/script>')
+window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')
 </script>
-<script src="fairclinical.github.io/js/plugins.js"></script>
-<script src="fairclinical.github.io/js/main.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
