Fixed images paths

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Header -->
 <section id="header">
     <div class="inner">
-        <img src="images/Logo.png"/>
+        <img src="./images/Logo.png"/>
         <h1><strong>FAIR Clinical</strong></h1>
     </div>
 </section>
@@ -90,25 +90,25 @@
         </header>
         <div class="row gtr-150">
             <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="images/Tim.jpg"/>
+                <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
                 <h3>UK</h3>
                 <p><b>Dr. Tim Beck</b> <br>
                     University of Nottingham</p>
             </div>
             <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="images/Venkata.jpg"/>
+                <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
                 <h3>Luxembourg</h3>
                 <p><b>Dr. Venkata Satagopam</b>
                     Universite Du Luxembourg</p>
             </div>
             <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="images/Nona.jpg"/>
+                <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
                 <h3>France</h3>
                 <p><b>Dr. Naderi Nona</b><br>
                     Universite Paris-Saclay</p>
             </div>
             <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="images/Patrick.jpg"/>
+                <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
                 <h3>Switzerland</h3>
                 <p><b>Professor Patrick Ruch</b><br>
                     Swiss Institute of Bioinformatics</p>
@@ -135,7 +135,7 @@
 
 <!-- Footer -->
 <section id="footer">
-    <img src="images/chist-logo.svg"/>
+    <img src="./images/chist-logo.svg"/>
 </section>
 
 <!-- Scripts -->
