--- a/members.html
+++ b/members.html
@@ -27,7 +27,7 @@
 <!-- Header -->
 <section id="header">
     <div class="inner">
-        <img src="images/Logo.png"/>
+        <img src="./images/Logo.png"/>
         <h1><strong>FAIR Clinical</strong></h1>
     </div>
 </section>
@@ -45,7 +45,7 @@
                         <h3>UK</h3>
                         <div class="row gtr-150">
                             <div class="members-pi">
-                                <img alt="" class="profile-pic" src="images/Tim.jpg"/>
+                                <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
                                 <p><b>Dr. Tim Beck</b><br>
                                     University of Nottingham</p>
                             </div>
@@ -65,7 +65,7 @@
                         <h3>Luxembourg</h3>
                         <div class="row gtr-150">
                             <div class="members-pi">
-                                <img alt="" class="profile-pic" src="images/Venkata.jpg"/>
+                                <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
                                 <p><b>Dr. Venkata Satagopam</b><br>
                                     Universite Du Luxembourg</p>
                             </div>
@@ -85,7 +85,7 @@
                         <h3>France</h3>
                         <div class="row gtr-150">
                             <div class="members-pi">
-                                <img alt="" class="profile-pic" src="images/Nona.jpg"/>
+                                <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
                                 <p><b>Dr. Naderi Nona</b><br>
                                     Universite Paris-Saclay</p>
                             </div>
@@ -146,7 +146,7 @@
                         <h3>Switzerland</h3>
                         <div class="row gtr-150">
                             <div class="members-pi">
-                                <img alt="" class="profile-pic" src="images/Patrick.jpg"/>
+                                <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
                                 <p><b>Professor Patrick Ruch</b><br>
                                     Swiss Institute of Bioinformatics</p>
                             </div>
@@ -166,7 +166,7 @@
         <!-- Footer -->
         <section id="footer">
             <hr>
-            <img src="images/chist-logo.svg"/>
+            <img src="./images/chist-logo.svg"/>
         </section>
 
         <!-- Scripts -->
