Refactored members page layout. Fixed "contact us" link. Added organisation logos.

--- a/index.html
+++ b/index.html
@@ -90,28 +90,32 @@
         </header>
         <div class="row gtr-150">
             <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
-                <h3>UK</h3>
-                <p><b>Dr. Tim Beck</b> <br>
-                    University of Nottingham</p>
-            </div>
-            <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
                 <h3>Luxembourg</h3>
-                <p><b>Dr. Venkata Satagopam</b>
-                    Universite Du Luxembourg</p>
+                <span><b>Dr. Venkata Satagopam</b>
+                    Universite Du Luxembourg</span>
+                <img class="org-logo" src="images/university-of-luxembourg.svg" />
+            </div>
+            <div class="col-3 col-12-medium">
+                <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
+                <h3>UK</h3>
+                <span><b>Dr. Tim Beck</b> <br>
+                    University of Nottingham</span>
+                <img class="org-logo" src="images/UoN-Nottingham-Blue.png" />
             </div>
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
                 <h3>France</h3>
-                <p><b>Dr. Naderi Nona</b><br>
-                    Universite Paris-Saclay</p>
+                <span><b>Dr. Naderi Nona</b><br>
+                    Universite Paris-Saclay</span>
+                <img class="org-logo" src="images/logo-ups.svg" />
             </div>
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
                 <h3>Switzerland</h3>
-                <p><b>Professor Patrick Ruch</b><br>
-                    Swiss Institute of Bioinformatics</p>
+                <span><b>Professor Patrick Ruch</b><br>
+                    Swiss Institute of Bioinformatics</span>
+                <img class="org-logo" src="images/swiss-logo.svg"/>
             </div>
         </div>
         <ul class="actions special">
@@ -128,7 +132,7 @@
         </header>
         <p></p>
         <ul class="actions special">
-            <li><a class="button wide" href="tim.beck@nottingham.ac.uk">Contact Us</a></li>
+            <li><a class="button wide" href="mailto:tim.beck@nottingham.ac.uk">Contact Us</a></li>
         </ul>
     </div>
 </section>
