--- a/members.html
+++ b/members.html
@@ -23,140 +23,117 @@
     </a>
 </div>
 <body class="is-preload">
-
-<!-- Header -->
-<section id="header">
-    <div class="inner">
-        <img src="./images/Logo.png"/>
-        <h1><strong>FAIR Clinical</strong></h1>
-    </div>
-</section>
-
 <!-- Five -->
 <section class="main style1" id="five">
     <div class="container">
         <section>
             <div class="row">
                 <div class="center-container">
-                    <h2>Members</h2>
+                    <h2>The Team</h2>
                     <hr>
                     <!--								UK group -->
-                    <div class="members-group">
-                        <h3>UK</h3>
-                        <div class="row gtr-150">
-                            <div class="members-pi">
-                                <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
-                                <p><b>Dr. Tim Beck</b><br>
-                                    University of Nottingham</p>
-                            </div>
-                            <div class="members-underling-container">
-                                <div class="members-underling">
-                                    <p><b>Thomas Rowlands</b><br>
-                                        Research Software Engineer
-                                    </p>
-                                </div>
-                            </div>
+                    <div class="member-container">
+                        <div class="member">
+                            <img alt="" class="profile-pic" src="./images/Anais.jpg"/>
+                            <p><b>Anais Mottaz</b><br>
+                                Research Associate<br>
+                                Swiss Institute of Bioinformatics
+                            </p>
                         </div>
-                    </div>
-                    <!--								UK group end -->
-                    <hr>
-                    <!--							Luxembourg group	-->
-                    <div class="members-group">
-                        <h3>Luxembourg</h3>
-                        <div class="row gtr-150">
-                            <div class="members-pi">
-                                <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
-                                <p><b>Dr. Venkata Satagopam</b><br>
-                                    Universite Du Luxembourg</p>
-                            </div>
-                            <div class="members-underling-container">
-                                <div class="members-underling">
-                                    <p><b>Basel Alshaikhdeeb</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                            </div>
+                        <div class="member">
+                            <img alt="" class="profile-pic" src="./images/Basel.jpg"/>
+                            <p><b>Dr. Basel M.M. Alshaikhdeeb</b><br>
+                                Postdoctoral Researcher<br>
+                                Swiss Institute of Bioinformatics
+                            </p>
                         </div>
-                    </div>
-                    <!--								Luxembourg group end-->
-                    <hr>
-                    <!--							France group	-->
-                    <div class="members-group">
-                        <h3>France</h3>
-                        <div class="row gtr-150">
-                            <div class="members-pi">
-                                <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
-                                <p><b>Dr. Naderi Nona</b><br>
-                                    Universite Paris-Saclay</p>
-                            </div>
-                            <div class="members-underling-container">
-                                <div class="members-underling">
-                                    <p><b>Sarah Cohen-Boulakia</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Pierre</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Patrick Paroubek</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Carlos Cuevas-Villarmin</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Javier-Alejandro Lopetegui-Gonzalez</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Mathilde</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Mathieu</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Virgile</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                                <div class="members-underling">
-                                    <p><b>Katherine</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                            </div>
-
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Carlos Cuevas-Villarmin</b><br>
+                                MSc Student<br>
+                                Universite Paris-Saclay
+                            </p>
                         </div>
-                    </div>
-                    <!--								France group end-->
-                    <hr>
-                    <!--								Switzerland group start-->
-                    <div class="members-group">
-                        <h3>Switzerland</h3>
-                        <div class="row gtr-150">
-                            <div class="members-pi">
-                                <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
-                                <p><b>Professor Patrick Ruch</b><br>
-                                    Swiss Institute of Bioinformatics</p>
-                            </div>
-                            <div class="members-underling-container">
-                                <div class="members-underling">
-                                    <p><b>Anais Mottaz</b><br>
-                                        Postdoctoral Researcher
-                                    </p>
-                                </div>
-                            </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Javier-Alejandro Lopetegui-Gonzalez</b><br>
+                                MSc Student<br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Katherine</b><br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Mathieu</b><br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Mathilde</b><br>
+                                PhD Student<br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
+                            <p><b>Dr. Naderi Nona</b><br>
+                                Universite Paris-Saclay</p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Patrick Paroubek</b><br>
+                                Postdoctoral Researcher<br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
+                            <p><b>Professor Patrick Ruch</b><br>
+                                SIB Text Mining Group Leader<br>
+                                Swiss Institute of Bioinformatics</p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Pierre</b><br>
+                                Postdoctoral Researcher<br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Professor Sarah Cohen-Boulakia</b><br>
+                                Postdoctoral Researcher<br>
+                                Universite Paris-Saclay
+                            </p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Thomas Rowlands</b><br>
+                                Research Software Engineer<br>
+                                University of Leicester
+                            </p>
+                        </div>
+                        <div class="member">
+                            <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
+                            <p><b>Dr. Tim Beck</b><br>
+                                University of Nottingham</p>
+                        </div>
+                        <div class="member">
+                            <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
+                            <p><b>Dr. Venkata Satagopam</b><br>
+                                Universite Du Luxembourg</p>
+                        </div>
+                        <div class="member">
+                            <span class="icon solid style4 fa-user"></span>
+                            <p><b>Virgile</b><br>
+                                Universite Paris-Saclay
+                            </p>
                         </div>
                     </div>
                 </div>
