--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 <section id="header">
     <div class="inner">
         <img src="./images/Logo.png"/>
-        <h1><strong>FAIR Clinical</strong></h1>
     </div>
 </section>
 
@@ -40,9 +39,7 @@
                 <header class="major">
                     <h2>Aims</h2>
                 </header>
-                <p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet
-                    vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id
-                    accumsan.</p>
+                <p>FAIRClinical aims to enhance the FAIR-ness (Findability, Accessibility, Interoperability, Reuse) of supplementary data files in the biomedical literature and improve the reuse of unstructured clinical case report forms (CRFs).</p>
             </div>
         </div>
     </div>
