--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <header class="major">
                     <h2>Aims</h2>
                 </header>
-                <p>FAIRClinical aims to enhance the FAIR-ness (Findability, Accessibility, Interoperability, Reuse) of supplementary data files in the biomedical literature and improve the reuse of unstructured clinical case report forms (CRFs).</p>
+                <p>FAIRClinical aims to improve the reuse of published clinical case report forms (CRFs) and enhance the FAIR-ness (Findability, Accessibility, Interoperability, Reuse) of supplementary data files in the biomedical literature.</p>
             </div>
         </div>
     </div>
@@ -110,7 +110,7 @@
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
                 <h3>Switzerland</h3>
-                <span><b>Professor Patrick Ruch</b><br>
+                <span><b>Prof. Patrick Ruch</b><br>
                     Swiss Institute of Bioinformatics</span>
                 <img class="org-logo" src="images/swiss-logo.svg"/>
             </div>
