--- a/index.html
+++ b/index.html
@@ -63,17 +63,8 @@
                 <header class="major">
                     <h2>What we're doing</h2>
                 </header>
-                <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet
-                    vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id
-                    accumsan adipiscing ipsum.</p>
-                <p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus
-                    cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius
-                    accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae
-                    integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat
-                    feugiat etiam dolore.</p>
-                <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet
-                    vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id
-                    accumsan adipiscing ipsum.</p>
+                <p>CRFs collect patient data in clinical research studies and trials, and represent an information-rich subset of clinical research literature.  However, it is difficult to compare across many different CRFs which all use their own structures. We will use text mining approaches to find important clinical concepts in the CRFs.  These concepts will be used to create a unique open-access dataset that can be used to support biomedical research.</p>
+<p>Supplementary files linked to biomedical publications are rich sources of data, but they are almost impossible to search and find.  We will overcome this gap in biomedical data accessibility by using text mining approaches to provide descriptive metadata for supplementary files.  The metadata will be searchable using SIBiLS, the SIB Literature Services.</p>
             </div>
         </div>
     </div>
