--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Header -->
 <section id="header">
     <div class="inner">
-        <img src="./images/Logo.png"/>
+        <img class="banner-logo" src="./images/Logo.png"/>
     </div>
 </section>
 
