Corrected institute for Basel

--- a/members.html
+++ b/members.html
@@ -45,7 +45,7 @@
                             <img alt="" class="profile-pic" src="./images/Basel.jpeg"/>
                             <p><b class="member-name">Dr. Basel M.M. Alshaikhdeeb</b><br>
                                 Postdoctoral Researcher<br>
-                                Swiss Institute of Bioinformatics<br>
+                                Luxembourg Centre for Systems Biomedicine<br>
                                 <button class="member-bio-btn">Bio</button>
                             </p>
                             <div class="expanded-text">
