Added optional HTML attributes for best practice from code analysis

--- a/members.html
+++ b/members.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en-US">
 <head>
     <title>FAIRClinical</title>
     <meta charset="utf-8"/>
@@ -119,9 +119,9 @@
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Thomas Rowlands</b><br>
-                                Research Software Engineer<br>
-                                University of Leicester
+                            <p><b class="member-name">Dr. Thomas Rowlands</b><br>
+                                Research Fellow<br>
+                                University of Nottingham
                             </p>
                         </div>
                         <div class="member">
@@ -148,7 +148,7 @@
         <!-- Footer -->
         <section id="footer">
             <hr>
-            <img src="./images/chist-logo.svg"/>
+            <img alt="Chist-era logo" src="./images/chist-logo.svg"/>
         </section>
 
         <!-- Scripts -->
@@ -163,7 +163,7 @@
 <div id="member-dialog" draggable="false" closeText="close">
     <div class="dialog-content">
         <div class="profile-picture">
-            <img id="dialog-profile-pic" src="profile-picture-url.jpg" alt="Profile Picture">
+            <img id="dialog-profile-pic" src="" alt="Profile Picture">
         </div>
         <div class="bio">
             <h2 id="dialog-name">Name</h2>
