Corrected current member names and job titles.

--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
                 <h3>Luxembourg</h3>
-                <span><b>Dr. Venkata Satagopam</b>
-                    Universite Du Luxembourg</span>
+                <span><b>Venkata Satagopam</b><br>
+                    Université Du Luxembourg</span>
                 <img class="org-logo" src="images/university-of-luxembourg.svg" />
             </div>
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
                 <h3>UK</h3>
-                <span><b>Dr. Tim Beck</b> <br>
+                <span><b>Tim Beck</b> <br>
                     University of Nottingham</span>
                 <img class="org-logo" src="images/UoN-Nottingham-Blue.png" />
             </div>
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
                 <h3>France</h3>
-                <span><b>Dr. Naderi Nona</b><br>
-                    Universite Paris-Saclay</span>
+                <span><b>Nona Naderi</b><br>
+                    Université Paris-Saclay</span>
                 <img class="org-logo" src="images/logo-ups.svg" />
             </div>
             <div class="col-3 col-12-medium">
                 <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
                 <h3>Switzerland</h3>
-                <span><b>Prof. Patrick Ruch</b><br>
+                <span><b>Patrick Ruch</b><br>
                     Swiss Institute of Bioinformatics</span>
                 <img class="org-logo" src="images/swiss-logo.svg"/>
             </div>
