--- a/members.html
+++ b/members.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="member">
                             <img alt="" class="profile-pic" src="./images/Basel.jpeg"/>
-                            <p><b class="member-name">Dr. Basel M.M. Alshaikhdeeb</b><br>
+                            <p><b class="member-name">Basel M.M. Alshaikhdeeb</b><br>
                                 Postdoctoral Researcher<br>
                                 Luxembourg Centre for Systems Biomedicine<br>
                                 <button class="member-bio-btn">Bio</button>
@@ -56,89 +56,74 @@
                             <span class="icon solid style4 fa-user"></span>
                             <p><b class="member-name">Carlos Cuevas-Villarmin</b><br>
                                 MSc Student<br>
-                                Universite Paris-Saclay
+                                Université Paris-Saclay
                             </p>
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
                             <p><b class="member-name">Javier-Alejandro Lopetegui-Gonzalez</b><br>
                                 MSc Student<br>
-                                Universite Paris-Saclay
+                                Université Paris-Saclay
                             </p>
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Katherine</b><br>
-                                Universite Paris-Saclay
-                            </p>
-                        </div>
-                        <div class="member">
-                            <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Mathieu</b><br>
-                                Universite Paris-Saclay
-                            </p>
-                        </div>
-                        <div class="member">
-                            <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Mathilde</b><br>
+                            <p><b class="member-name">Mathilde Aguiar</b><br>
                                 PhD Student<br>
-                                Universite Paris-Saclay
+                                Université Paris-Saclay
                             </p>
                         </div>
                         <div class="member">
                             <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
-                            <p><b class="member-name">Dr. Naderi Nona</b><br>
-                                Universite Paris-Saclay</p>
+                            <p><b class="member-name">Nona Naderi</b><br>
+                                Junior Professor Chair<br>
+                                Université Paris-Saclay</p>
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
                             <p><b class="member-name">Patrick Paroubek</b><br>
-                                Postdoctoral Researcher<br>
-                                Universite Paris-Saclay
+                                Research Engineer<br>
+                                Université Paris-Saclay
                             </p>
                         </div>
                         <div class="member">
                             <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
-                            <p><b class="member-name">Professor Patrick Ruch</b><br>
+                            <p><b class="member-name">Patrick Ruch</b><br>
                                 SIB Text Mining Group Leader<br>
                                 Swiss Institute of Bioinformatics</p>
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Pierre</b><br>
-                                Postdoctoral Researcher<br>
-                                Universite Paris-Saclay
+                            <p><b class="member-name">Pierre Zweigenbaum</b><br>
+                                Senior Researcher<br>
+                                Université Paris-Saclay
                             </p>
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Professor Sarah Cohen-Boulakia</b><br>
-                                Postdoctoral Researcher<br>
-                                Universite Paris-Saclay
+                            <p><b class="member-name">Sarah Cohen-Boulakia</b><br>
+                                Professor<br>
+                                Université Paris-Saclay
                             </p>
                         </div>
                         <div class="member">
                             <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Dr. Thomas Rowlands</b><br>
+                            <p><b class="member-name">Thomas Rowlands</b><br>
                                 Research Fellow<br>
                                 University of Nottingham
                             </p>
                         </div>
                         <div class="member">
                             <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
-                            <p><b class="member-name">Dr. Tim Beck</b><br>
+                            <p><b class="member-name">Tim Beck</b><br>
+                                Associate Professor<br>
                                 University of Nottingham</p>
                         </div>
                         <div class="member">
                             <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
-                            <p><b class="member-name">Dr. Venkata Satagopam</b><br>
-                                Universite Du Luxembourg</p>
-                        </div>
-                        <div class="member">
-                            <span class="icon solid style4 fa-user"></span>
-                            <p><b class="member-name">Virgile</b><br>
-                                Universite Paris-Saclay
-                            </p>
+                            <p><b class="member-name">Venkata Satagopam</b><br>
+                                Research Scientist<br>
+                                Université Du Luxembourg</p>
                         </div>
                     </div>
                 </div>
