Added a profile pic for Pierre

--- a/members.html
+++ b/members.html
@@ -93,7 +93,7 @@
                                 Swiss Institute of Bioinformatics</p>
                         </div>
                         <div class="member">
-                            <span class="icon solid style4 fa-user"></span>
+                            <img alt="" class="profile-pic" src="./images/Pierre.jpg"/>
                             <p><b class="member-name">Pierre Zweigenbaum</b><br>
                                 Senior Researcher<br>
                                 Université Paris-Saclay
